// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReDialog component render with custom props 1`] = `
<ReTransition-stub
  name="fade"
  transition="fade"
>
  <div
    class="re-dialog"
  >
    <ReTransition-stub
      transition="slide-right"
    >
      <div
        class="re-dialog__content re-dialog__content--fullscreen re-dialog__content--top __CONTENT-CLASS__"
      >
        __CONTENT__
      </div>
    </ReTransition-stub>
  </div>
</ReTransition-stub>
`;

exports[`ReDialog component render with default props 1`] = `
<ReTransition-stub
  name="fade"
  transition="fade"
>
  <div
    class="re-dialog re-dialog--overlay"
  >
    <ReTransition-stub
      transition="fade"
    >
      <div
        class="re-dialog__content re-dialog__content--auto re-dialog__content--middle"
      >
        __CONTENT__
      </div>
    </ReTransition-stub>
  </div>
</ReTransition-stub>
`;
